# multi-agent

./: .gcloudignore  .gitignore  GEMINI.md  Makefile  README.md  cloudbuild.yaml  cloudrun-mcp.sh  deploy.sh  gke-mcp.sh  init.sh  init2.sh  judge_test.sh  pyproject.toml  requirements.txt  research_test.sh  run_local.sh  set_env.sh  test_researcher_direct.py  test_tool.py
.gemini/: settings.json
agents/: Makefile
agents/content_builder/: Dockerfile  Makefile  README.md  __init__.py  agent.json  agent.py  cloudbuild.yaml  pyproject.toml  test_input.json  testbuild.yaml
agents/content_builder/agent/: agent.json
agents/content_builder/shared/: adk_app.py  authenticated_httpx.py  pyproject.toml
agents/content_builder/tests/: test_agent.py
agents/judge/: .dockerignore  Dockerfile  Makefile  README.md  __init__.py  agent.json  agent.py  judge.cloudbuild.yaml  pyproject.toml
agents/judge/agent/: agent.json
agents/judge/tests/: invoke_agent.py  test_agent.py
agents/orchestrator/: Dockerfile  Makefile  README.md  agent.json  agent.py  authenticated_httpx.py  cloudbuild.yaml  pyproject.toml  run.sh  test_orchestrator.py  test_state_capturer.py
agents/researcher/: .dockerignore  Dockerfile  Makefile  README.md  __init__.py  agent.json  agent.py  cloudbuild.yaml  pyproject.toml
agents/researcher/agent/: agent.json
agents/researcher/tests/: test_agent.py
aks/: deploy-aks.sh  manifests.yaml  setup_cluster.sh
app/: Dockerfile  Makefile  README.md  __init__.py  a2a_utils.py  logging_config.py  main.py  pyproject.toml  requirements.txt
app/frontend/: app.ts  course.html  course.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js
app/tests/: test_a2a_utils.py  test_api.py  test_auth.py  test_logging_config.py  test_utils.py
gke/: deploy.sh  endpoint.sh  manifests.yaml  setup_cluster.sh  status.sh  test_e2e_gke.sh
shared/: a2a_utils.py  adk_app.py  authenticated_httpx.py  logging_config.py
