[project]
name = "judge-agent"
version = "0.1.0"
description = "Judge microservice agent"
requires-python = ">=3.13"
dependencies = [
    "shared-utils",
    "google-adk",
    "a2a-sdk",
    "fastapi",
    "uvicorn",
    "python-json-logger",
    "google-cloud-logging",
    "opentelemetry-exporter-gcp-trace",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
