[project]
name = "orchestrator-builder-agent"
version = "0.1.0"
description = "Orchestrator microservice agent"
requires-python = ">=3.13"
dependencies = [
    "shared-utils",
    "google-adk",
    "a2a-sdk",
    "fastapi",
    "uvicorn",
    "python-json-logger",
    "google-cloud-logging",
    "opentelemetry-exporter-gcp-trace",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]


[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["agent.py", "run.sh"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
